Add preference system to rank top preferences